--- a/Plugin/Plugin.csproj
+++ b/Plugin/Plugin.csproj
@@ -27,13 +27,17 @@
     <Content Include="multiplayer_xsocket\edittime.js" />
     <Content Include="multiplayer_xsocket\PluginIcon.ico" />
     <Content Include="multiplayer_xsocket\runtime.js" />
+    <Content Include="multiplayer_xsocket\xsockets.latest.js" />
     <Content Include="scripts\XSockets\xsockets.latest.js" />
-    <Content Include="multiplayer_xsocket\xsockets.latest.min.js" />
+    <Content Include="scripts\XSockets\xsockets.latest.min.js" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="multiplayer_xsocket\client.ts" />
     <TypeScriptCompile Include="multiplayer_xsocket\entities.ts" />
-    <TypeScriptCompile Include="multiplayer_xsocket\xsocket-wrapper.ts" />
+    <TypeScriptCompile Include="multiplayer_xsocket\game-client.ts" />
+    <TypeScriptCompile Include="multiplayer_xsocket\room-client.ts" />
+    <TypeScriptCompile Include="scripts\typings\jquery\jquery.d.ts" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="scripts\XSockets\xsockets.latest.js.map" />
