--- a/Plugin/packages.config
+++ b/Plugin/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="XSockets.JsApi" version="6.1.1" targetFramework="net45" />
+  <package id="jquery.TypeScript.DefinitelyTyped" version="3.1.0" targetFramework="net45" />
 </packages>
