--- a/ServerController/packages.config
+++ b/ServerController/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
+  <package id="Serilog" version="1.5.14" targetFramework="net45" />
   <package id="XSockets.Core" version="5.3.3.1" targetFramework="net45" />
   <package id="XSockets.ItemTemplates" version="5.0.2.1" targetFramework="net45" />
   <package id="XSockets.Plugin.Framework" version="5.3.3.1" targetFramework="net45" />
